Add support for coord placements
