# src/query/api/v1/handler/placement/delete.go
@@ -58,6 +58,9 @@ var (
 	// M3AggDeleteURL is the url for the placement delete handler for the M3Agg service.
 	M3AggDeleteURL = path.Join(handler.RoutePrefixV1, M3AggServicePlacementPathName, placementIDPath)
 
+	// M3CoordinatorDeleteURL is the url for the placement delete handler for the M3Coordinator service.
+	M3CoordinatorDeleteURL = path.Join(handler.RoutePrefixV1, M3CoordinatorServicePlacementPathName, placementIDPath)
+
 	errEmptyID = errors.New("must specify placement ID to delete")
 )
 
